# raindrop

./: .gitignore  CMakeLists.txt  README.md  build.sh  raindrop  raindrop.cpp
.cache/clangd/index/: gl.c.B560A0CEC77ABD11.idx  gl.h.ADD208410684826B.idx  khrplatform.h.C4F2C98663F25D25.idx  main.cpp.AFA85B5F42281637.idx
includes/: shader.hpp
shaders/: compute.glsl  frag.glsl
src/: main.cpp
